--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,7 +46,8 @@ a {
 .btn {
     display: inline-block;
     min-width: 118px;
-    padding: 14px;
+    padding: 0 16x;
+    line-height: 50px;
     border-radius: 999px;
     background: #171100;
     color: #fff;
@@ -232,7 +233,7 @@ a {
 
 .cta-group .hero-cta {
     min-width: 180px;
-    line-height: 40px;
+    line-height: 64px;
     border-radius: 2px solid #ffb900;
     background: var(--color-primary);
 }
@@ -407,6 +408,7 @@ a {
 
 .popular .course-item .foot .btn-book {
     border: none;
+    font-size: 1.4rem;
 }
 
 .popular .course-item .foot .btn-book:hover {
@@ -476,10 +478,6 @@ a {
     cursor: default;
 }
 
-.feedback .info {
-    width: 34%;
-}
-
 .feedback .content {
     width: 66%;
     margin-left: auto;
@@ -492,4 +490,317 @@ a {
     font-style: italic;
     font-weight: 400;
     line-height: 1.54; /* 153.846% */
+}
+
+/* features 1 */
+.features {
+    padding: 65px 0px;
+    margin-top: 135px;
+    background: #fff;
+}
+
+.features .body {
+    display: flex;
+    justify-content: space-between;
+}
+
+.features .body .images {
+    display: flex;
+    gap: 0 30px;
+}
+
+.features .body .images .image {
+    width: 270px;
+    height: 404px;
+    object-fit: cover;
+    background-repeat: no-repeat;
+    border-radius: 16px;
+}
+
+.features .body .images .image:first-child {
+    margin-top: 34px;
+}
+
+.features .content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 41%;
+}
+
+.features .content .heading {
+    color: #171100;
+    font-family: var(--font-heading);
+    font-size: 3.8rem;
+    font-weight: 700;
+    line-height: 1.27; /* 126.316% */
+    letter-spacing: -0.76px;
+}
+
+.features .content .desc {
+    margin-top: 16px;
+    color: #5f5b53;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.75; /* 175% */
+}
+
+.features .content .action-btn {
+    margin-top: 32px;
+    min-width: 137px;
+    background: var(--color-primary);
+}
+
+/* features 2 */
+.features-2 {
+    margin-top: 70px;
+}
+
+.features-2 .body {
+    flex-direction: row-reverse;
+}
+
+.features-2 .content {
+    width: 49%;
+}
+
+.features-2 .images img {
+    width: 470px;
+    height: 440px;
+    object-fit: cover;
+    background-repeat: no-repeat;
+    border-radius: 20px;
+}
+
+/* blog */
+
+.blog {
+    margin-top: 135px;
+    padding: 96px 0px;
+    background: #fffcf4;
+}
+
+.blog .blog-list {
+    display: flex;
+    margin-top: 55px;
+    gap: 30px;
+    overflow: hidden;
+}
+
+.blog .blog-top .heading {
+    color: #130606;
+    text-align: center;
+    font-family: var(--font-heading);
+    font-size: 3.8rem;
+    font-weight: 700;
+    line-height: 1.27; /* 126.316% */
+    letter-spacing: -0.76px;
+}
+
+.blog .blog-top .desc {
+    width: 448px;
+    margin: 16px auto auto;
+    color: #696262;
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.75; /* 175% */
+}
+
+.blog-list .blog-item {
+    width: calc(33.33% - 20px);
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #fff;
+}
+
+.blog-list .blog-item:hover {
+    box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.05);
+}
+
+.blog-list .blog-item .thumb {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 16px 16px 0 0;
+}
+
+.blog-list .blog-item .info {
+    padding: 20px 20px 28px;
+}
+
+.blog-item .info .date {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    padding-bottom: 12px;
+    color: #5f5b53;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.86; /* 185.714% */
+}
+
+.blog-item .info .date::before {
+    display: inline-block;
+    margin-right: 4px;
+    content: "";
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: var(--color-primary);
+}
+
+.blog-item .info .date::after {
+    position: absolute;
+    left: 0;
+    right: -27px;
+    bottom: 0;
+    display: inline-block;
+    content: "";
+    height: 1px;
+    border-radius: 0.5px;
+    background: #e2dfda;
+}
+
+.blog-item .info .title {
+    margin-top: 12px;
+}
+
+.blog-item .info .title a {
+    color: #171100;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.75; /* 175% */
+}
+
+.blog .blog-item .info .action-btn {
+    margin-top: 12px;
+    font-size: 1.4rem;
+}
+
+.blog .blog-item .info .action-btn:hover {
+    color: #fff;
+    background: var(--color-primary);
+}
+
+.blog .dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 28px;
+}
+
+.blog .dot {
+    margin-right: 6px;
+    width: 6px;
+    height: 6px;
+    background: #634700;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.blog .dot.active {
+    background: var(--color-primary);
+    cursor: default;
+}
+
+/* footer */
+.footer {
+    padding: 96px 135px 28px;
+    background: #2e2100;
+}
+
+.footer .row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer .column {
+    width: 21.6%;
+}
+
+.footer .column:first-child {
+    width: 35%;
+}
+
+.footer .column .desc {
+    margin-top: 18px;
+    width: 267px;
+    color: #bfbcb2;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.86; /* 185.714% */
+}
+
+footer .column .socials {
+    display: flex;
+    margin-top: 18px;
+    gap: 18px;
+}
+
+.footer .column .title {
+    position: relative;
+    color: #fff;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.75; /* 175% */
+}
+
+.footer .column .title::after {
+    position: absolute;
+    left: 0;
+    bottom: -14px;
+    display: inline-block;
+    content: "";
+    width: 55%;
+    height: 1px;
+    background: #59554b;
+}
+
+.footer .column .list {
+    margin-top: 43px;
+}
+
+.footer .column .list a {
+    display: inline-block;
+    margin-bottom: 12px;
+    color: #bfbcb2;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.86; /* 185.714% */
+}
+
+.footer .list strong {
+    font-weight: 600;
+    color: #ffffff;
+}
+
+.footer .column .list:last-child a {
+    margin-top: 0;
+}
+
+.footer .copyright {
+    margin-top: 65px;
+}
+
+.footer .copyright .desc {
+    position: relative;
+    color: #807d74;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.86; /* 185.714% */
+}
+
+.footer .copyright .desc::before {
+    position: absolute;
+    top: -28px;
+    left: 0;
+    right: 0;
+    display: inline-block;
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: #59554b;
 }
